# bbtkv2_python

./: .gitignore  .readthedocs.yaml  README.md  TODO.md  bbtkv2.py  setup.cfg
bbtkv2/: __init__.py  dsc_events_dataframe.csv  dsc_raw_dataframe.csv  dsc_raw_text.txt  dscm_processed_events.csv  dscm_raw_events.csv  dscm_raw_output.txt  raw01.csv  raw_DSCM_output.txt
check_timings/: check-audio-visual-timing.py
docs/: api.rst  conf.py  index.rst  intro.rst  minicom.rst  requirements.txt
src/: bbtkv2.py  bbtkv2.py~
src/bbtkv2/: bbtkv2.py
src/bbtkv2.egg-info/: PKG-INFO  SOURCES.txt
tests/: bbtk_logic_analyzer.py  example_of_dscm_output.csv
tests/expyriment/: bbtk_processed_events.csv  bbtk_raw_events.csv  check-audio-visual-timing_07_202204221743.xpd  check-audio-visual-timing_07_202204221743.xpe  expyriment-timing-performance-a-first-attempt.html  expyriment-timing-performance-a-first-attempt.ipynb
