[metadata]
name = bbtkv2
version = 0.0.2
author = Christophe Pallier
author_email = christophe@pallier.org
description = Code to control the BlackBox ToolKit v2 device for audio-visual timing checks
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/chrplr/bbtkv2_python
project_urls =
    Documentation = https://bbtkv2.rtfd.io
    Bug Tracker = https://github.com/chrplr/bbtkv2_python/issues

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Affero General Public License v3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    pandas
    csv
    toml
    pyserial
    
[options.packages.find]
where = src
